# f1-journey

./: .gitignore
backend/: alembic.ini  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 86b1ba168afe_create_circuits_and_race_events_tables.py  a3f2c1d4e5b6_create_seat_sections_table.py  b4d5e6f7a8b9_add_ticket_listings_table.py  c5d6e7f8a9b0_add_travel_tables.py  d6e7f8a9b0c1_add_user_account_tables.py
backend/app/: config.py  database.py  main.py
backend/app/alerts/: checker.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/models/: __init__.py  circuit.py  exchange_rate.py  google_calendar_token.py  price_alert.py  race_event.py  saved_search.py  seat_section.py  ticket_listing.py  travel_estimate.py  user.py
backend/app/routers/: auth.py  calendar.py  circuits.py  price_alerts.py  race_events.py  saved_searches.py  sections.py  tickets.py  travel.py
backend/app/schemas/: __init__.py  auth.py  circuit.py  price_alert.py  race_event.py  saved_search.py  seat_section.py  ticket_listing.py  travel.py
backend/app/scrapers/: base.py  f1_official.py  gp_portal.py  matcher.py  orchestrator.py  seatgeek.py  stubhub.py  (+3 more)
backend/f1_journey_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_airports.py  test_auth_api.py  test_circuits_api.py  test_matcher.py  test_models.py  test_orchestrator.py  test_price_alerts_api.py  test_race_events_api.py  test_saved_searches_api.py  test_sections_api.py  test_ticket_listing_model.py  test_tickets_api.py  test_travel_api.py  test_travel_models.py
(+63 files in other folders)
